# loom

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
core_doctypes/role/: role.json  role.rhai
core_doctypes/user/: user.json
crates/loom_api/: Cargo.toml
crates/loom_api/src/: cache.rs  lib.rs  realtime.rs  server.rs
crates/loom_api/src/auth/: mod.rs  oauth.rs  session.rs  token.rs
crates/loom_api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  site.rs
crates/loom_api/src/routes/: activity.rs  auth.rs  config.rs  customize.rs  doctype.rs  method.rs  mod.rs  resource.rs  settings.rs  upload.rs
crates/loom_cli/: Cargo.toml
crates/loom_cli/src/: file_watcher.rs  main.rs  site_config.rs
crates/loom_cli/src/commands/: console.rs  export_fixtures.rs  get_app.rs  install_app.rs  migrate.rs  mod.rs  new_app.rs  new_site.rs  serve.rs  sync.rs  worker.rs
crates/loom_core/: Cargo.toml
crates/loom_core/src/: context.rs  error.rs  lib.rs
crates/loom_core/src/db/: activity.rs  engine.rs  migrate.rs  mod.rs  pool.rs  query.rs
crates/loom_core/src/doctype/: child.rs  controller.rs  crud.rs  hook_runner.rs  hooks.rs  meta.rs  mod.rs  naming.rs  registry.rs  workflow.rs
crates/loom_core/src/perms/: check.rs  docperm.rs  mod.rs  roles.rs  user_perm.rs
crates/loom_core/src/script/: api.rs  cache.rs  context.rs  engine.rs  mod.rs
crates/loom_core/src/wasm/: abi.rs  mod.rs  runtime.rs  sandbox.rs
crates/loom_core/tests/: child_tests.rs  crud_tests.rs  docperm_tests.rs  error_tests.rs  meta_tests.rs  naming_expression_tests.rs  naming_tests.rs  permission_tests.rs  query_builder_tests.rs  roles_tests.rs  script_cache_tests.rs  script_tests.rs  user_perm_tests.rs  workflow_tests.rs
crates/loom_print/: Cargo.toml
crates/loom_print/src/: lib.rs  pdf.rs  template.rs
crates/loom_queue/: Cargo.toml
crates/loom_queue/src/: email.rs  error.rs  lib.rs  queue.rs  scheduler.rs  worker.rs
crates/loom_tests/: Cargo.toml
crates/loom_tests/src/: lib.rs
crates/loom_tests/tests/: activity.rs  api.rs  api_endpoints.rs  app_lifecycle.rs  cache.rs  child_table.rs  controller.rs  crud.rs  hooks.rs  migration.rs  naming.rs  permissions.rs  queue.rs  realtime.rs  scheduler.rs  user_permissions.rs  workflow_integration.rs
docs/: index.md  mkdocs.yml
docs/api/: index.md  other.md  resource.md
docs/cli/: index.md
docs/concepts/: apps.md  doctypes.md  index.md  permissions.md  queue.md  realtime.md  scripting.md
docs/getting-started/: index.md  installation.md  your-first-app.md
docs/guides/: child-tables.md  fetch-from.md  index.md  workflows.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/components/: ActivityTimeline.vue  FormLayout.vue  Navbar.vue  PluginPage.vue  Sidebar.vue
frontend/src/components/controls/: AttachControl.vue  FieldControl.vue  LinkControl.vue  TableControl.vue
frontend/src/components/ui/: LAlert.vue  LBadge.vue  LButton.vue  LInput.vue  LModal.vue  LPageHeader.vue  LToastContainer.vue  index.ts
frontend/src/components/workspace/: CountWidget.vue  ListWidget.vue  ShortcutWidget.vue  WorkspaceGrid.vue
frontend/src/composables/: useDoctypeList.ts  useListView.ts  usePlugins.ts  useSession.ts  useSidebar.ts  useTheme.ts  useToast.ts
frontend/src/pages/: AppWorkspace.vue  CustomizeForm.vue  Desk.vue  DocTypeBuilder.vue  Form.vue  ListView.vue  Login.vue  Report.vue  RolePermissionManager.vue  RouteResolver.vue  Workspace.vue
frontend/src/router/: index.ts
frontend/src/utils/: call.ts  depends.ts  socket.ts
scripts/: build-release.sh
