[package]
name = "loom_api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
loom_core.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
fred.workspace = true
uuid.workspace = true
chrono.workspace = true
rhai.workspace = true
toml.workspace = true
futures-util.workspace = true
