[package]
name = "loom_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
loom_core.workspace = true
loom_api.workspace = true
loom_queue.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
clap = { workspace = true, features = ["env"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustyline.workspace = true
rhai.workspace = true
chrono.workspace = true
futures-util.workspace = true
notify.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
flate2 = "1"
tar = "0.4"
zip = "2"
tempfile = "3"
