[package]
name = "loom_queue"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
loom_core.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
fred.workspace = true
lettre.workspace = true
chrono.workspace = true
rhai.workspace = true
toml.workspace = true
